# Research

./: Business-Centric architectures and testability.md  CaptchaSolving.md  Oit.md  PlansFeatures.md  RustWebExtension.md  StaticSiteGenerators.md
crates_features/: Cargo.toml
crates_features/module/front/: Cargo.toml
crates_features/module/front/src/: main.rs
crates_features/module/left/: Cargo.toml
crates_features/module/left/src/: lib.rs
crates_features/module/right/: Cargo.toml
crates_features/module/right/src/: lib.rs
crates_features/module/root/: Cargo.toml
crates_features/module/root/src/: lib.rs
